# Network-Forensics-Analysis

Ann Tunnels Underground/: LICENSE.txt  evidence-network-tunneling-62-TCP-segment.raw  evidence-network-tunneling-62.raw  evidence-network-tunneling.pcap
Ann’s Aurora/: 010.010.010.010.04444-010.010.010.070.01036  010.010.010.010.08080-010.010.010.070.01035  LICENSE.txt  README.txt  report.xml
Ann’s Aurora/output_Fri_Nov_24_01_44_25_2023/: audit.txt
Ann’s Aurora/output_Fri_Nov_24_02_20_16_2023/: audit.txt
Ann’s Aurora/output_Fri_Nov_24_02_20_16_2023/htm/: 00000000.htm
Ann’s Aurora/output_Thu_Nov_23_23_28_56_2023/: audit.txt
InterOptic/: snort.conf
InterOptic Part 2/: 00000589-edited.html  000005B9-edited.html  000005BE-edited.html  Sketchy_evl  Welcome to sKetch  evl_pwny  sarg_dl Script  sarg_dl Script - Notepad Version.txt  squid_extract_v01.pl
InterOptic Part 2/sarg-2.3.10/: ABOUT-NLS.txt  CMakeLists.txt  ChangeLog  Makefile  Makefile.in  PROGRAMMERS  README  README_cmake  aclocal.m4  auth.c  authfail.c  btree_cache.c  charset.c  config.status  configure  configure.in  convlog.c  css.c  dansguardian_log.c  dansguardian_report.c  datafile.c  decomp.c  denied.c  dichotomic.c  download.c  email.c  exclude.c  getconf.c  grepday.c  html.c  index.c  indexonly.c  ip2name.c  ip2name_dns.c  ip2name_exec.c  lastlog.c  log.c  longline.c  realtime.c  redirector.c  (+20 more)
InterOptic Part 2/sarg-2.3.10/documentation/: util.txt
InterOptic Part 2/sarg-2.3.10/include/: conf.h  config.h.in  defs.h  dichotomic.h  info.h  ip2name.h
InterOptic Part 2/sarg-2.3.10/po/: LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  es.gmo  es.po  fr.gmo  fr.po  hu.gmo  hu.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  lv.gmo  lv.po  nl.gmo  nl.po  pl.gmo  pl.po  pt.gmo  pt.po  pt_BR.gmo  pt_BR.po  ro.gmo  (+14 more)
InterOptic Part 2/squid/: swap.state
InterOptic Part 2/squid-extract-evl/: extract_log.txt
InterOptic Part 2/squid-extract-evl/sketchy.evl/: default  parameters.txt  wp-login.php
InterOptic Part 2/squid-extract-evl/sketchy.evl/wp-admin/: parameters.txt  profile.php
InterOptic Part 2/squid-extract-evl/www.hyperpromote.com/tags/: parameters.txt  showaon.html
InterOptic Part 2/squid/00/00/: 00000001  00000002  00000003  00000004  00000005  00000006  00000007  00000008  00000009  0000000A  0000000B  0000000C  0000000D  0000000E  0000000F  00000010  00000011  00000012  00000013  00000014  00000015  00000016  00000017  00000018  00000019  0000001A  0000001B  0000001C  0000001D  0000001E  0000001F  00000020  00000021  00000022  00000023  00000024  00000025  00000026  00000027  00000028  (+211 more)
InterOptic Part 2/squid/00/01/: 00000100  00000101  00000102  00000103  00000104  00000105  00000106  00000107  00000108  00000109  0000010A  0000010B  0000010C  0000010D  0000010E  0000010F  00000110  00000111  00000112  00000113  00000114  00000115  00000116  00000117  00000118  00000119  0000011A  0000011B  0000011C  0000011D  0000011E  0000011F  00000120  00000121  00000122  00000123  00000124  00000125  00000126  00000127  (+207 more)
InterOptic Part 2/squid/00/02/: 00000200  00000201  00000202  00000203  00000204  00000206  00000207  00000209  0000020A  0000020B  0000020C  0000020D  0000020E  0000020F  00000210  00000211  00000212  00000213  00000214  00000215  00000216  00000217  00000218  00000219  0000021A  0000021B  0000021C  0000021D  0000021E  0000021F  00000220  00000221  00000222  00000223  00000224  00000225  00000226  00000227  00000228  00000229  (+212 more)
InterOptic Part 2/squid/00/03/: 00000300  00000301  00000302  00000303  00000304  00000305  00000306  00000307  00000308  00000309  0000030A  0000030B  0000030C  0000030D  0000030E  0000030F  00000310  00000311  00000312  00000313  00000314  00000315  00000316  00000317  00000318  00000319  0000031A  0000031B  0000031C  0000031D  0000031E  0000031F  00000320  00000321  00000322  00000323  00000324  00000325  00000326  00000327  (+206 more)
InterOptic Part 2/squid/00/04/: 00000400  00000401  00000402  00000403  00000404  00000405  00000406  00000407  00000408  00000409  0000040A  0000040B  0000040C  0000040D  0000040E  0000040F  00000410  00000411  00000412  00000413  00000414  00000415  00000416  00000417  00000418  00000419  0000041A  0000041B  0000041C  0000041D  0000041E  0000041F  00000420  00000421  00000422  00000423  00000424  00000425  00000426  00000427  (+215 more)
InterOptic Part 2/squid/00/05/: 00000500  00000501  00000502  00000503  00000504  00000505  00000506  00000507  00000508  00000509  0000050A  0000050B  0000050C  0000050D  0000050E  0000050F  00000510  00000511  00000512  00000513  00000514  00000515  00000516  00000517  00000518  00000519  0000051A  0000051B  0000051C  0000051D  0000051E  0000051F  00000520  00000521  00000522  00000523  00000524  00000525  00000526  00000527  (+214 more)
InterOptic Part 2/squid/00/06/: 00000600  00000601  00000602  00000603  00000604  00000605  00000606  00000607  00000608  00000609  0000060A  0000060B  0000060C  0000060D  0000060E  0000060F  00000610  00000611  00000612  00000614  00000615  00000616  00000617  00000618  00000619  0000061A  0000061B  0000061C  0000061D  0000061E  0000061F  00000620  00000621  00000622  00000623  00000624  00000625  00000626  00000627  00000628  (+214 more)
InterOptic Part 2/squid/00/07/: 00000700  00000701  00000702  00000703  00000704  00000705  00000706  00000707  00000708  00000709  0000070A  0000070B  0000070C  0000070D  0000070E  0000070F  00000710  00000711  00000712  00000713  00000714  00000715  00000716  00000717  00000718  00000719  0000071A  0000071B  0000071C  0000071D  0000071E  0000071F  00000720  00000721  00000722  00000723  00000724  00000725  00000726  00000727  (+49 more)
InterOptic Part 2/var-log-squid/report/: index.html
InterOptic Part 2/var-log-squid/report/2011May18-2011May18/: index.html  sarg-date  siteuser.html  topsites.html
InterOptic Part 2/var-log-squid/report/2011May18-2011May18.1/: index.html  sarg-date  sarg-general  sarg-sites  siteuser.html  topsites.html
InterOptic/rules/: local.rules
(+309 files in other folders)
